chore: Separate User and Request Dtos
